# autotrader

./: .gitignore  autotrader.dockerfile  kill.sh  makefile  pyproject.toml  requirements.txt  run.sh
autotrader/: CMakeLists.txt
autotrader/experiments/: CMakeLists.txt  connection_raii.cpp  connection_test.cpp  contract_details.cpp  market_data.cpp  zmq.cpp
autotrader/include/: debug.h
autotrader/include/ib/: ib_client.h  market_data.h
autotrader/include/server/: base_thread.h  pub.h  pull.h  router.h
autotrader/include/util/: mpsc_queue.h  tsmap.h  tsvector.h
autotrader/src/: CMakeLists.txt  debug.cpp  decimal.cpp
autotrader/src/ib/: CMakeLists.txt  ib_client.cpp  market_data.cpp
autotrader/src/patch/: decimal.cpp
autotrader/src/server/: CMakeLists.txt  autotrader.cpp  base_thread.cpp  pub.cpp  pull.cpp  router.cpp
models/: test_model.py
models/bars_collector/: bars_collector.py  checkpoint_window_20_lr_0_001_epochs_500_495.cp
models/experiments/: first_nn.py  nn_0002.py  nn_0003.py  nn_0004.py  nn_0005.py  nn_0006.py
models/indicators/: ema.py  indicators.py  macd.py  moving_average.py  obv.py  rsi.py  tsi.py
models/model001/: checkpoint_window_10_lr_0_001_epochs_500_488.cp  checkpoint_window_15_lr_0_001_epochs_500_477.cp  model001.py
models/networks/: binary_head.py  binary_head_memory.py  memory_lstm.py  memory_tcn.py  montreal.py  nn0001.py  nn01_apply_window.py  nn01_column_indices.py  reg_head.py  rrds.py  simple_seq.py
models/nn001/: nn001.py
python/: __main__.py  config.json  main.py
python/autotrader/: collector.py  coordinator.py  driver.py  preprocessor.py  working_thread.py
python/autotrader/lib/: base_model.py  working_thread.py
python/autotrader/tools/: scanner_params.py
python/ui/: analyze_symbol.py  at_gui.py  instrument_select.py  plot_symbol.py  scanner_config.py  scanner_select.py  scrollable.py  start_page.py  symbol_select.py
pytrader/: main.py
pytrader/autotrader/: autotrader.py  coordinator.py  distributor.py  driver.py  preprocessor.py
pytrader/autotrader/lib/: working_thread.py
pytrader/ui/: analyze_symbol.py  instrument_select.py  list_symbols.py  scanner_config.py  start_page.py  symbol_select.py  table_symbol.py
